<resources>
    <string name="app_name">Wanandroid</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">首页</string>
    <string name="title_knowledge">知识体系</string>
    <string name="title_navigation">导航</string>
    <string name="title_project">项目</string>

    <string name="search_hint">发现更多干货</string>
    <string name="title_hot">热搜</string>
    <string name="title_history">历史搜索</string>
    <string name="title_website">常用网站</string>
    <string name="user_name">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
</resources>
